# ProjetoTransparencia

./: .env.example  README.md  config.py  db.py  main.py  pyproject.toml  requirements.txt
collectors/: __init__.py  base.py  camara.py  senado.py  tesouro.py  transparencia.py  tse.py
crosslinkers/: __init__.py  doador_contrato.py  emenda_contrato.py  parlamentar_resolver.py
migrations/: 001_initial_schema.sql  002_phase2_constraints.sql  003_emendas_tipo_descricao.sql  004_fase3.sql
test/: guia-testes-fase1.md  guia-testes-fase2.md  guia-testes-fase3.md  test_api_contratos.py  test_api_cota.py  test_api_emendas.py  test_apis.py  test_conexao.py  test_cruzamento_debug.py  test_emenda_pagamentos.py  test_mapeamento_contrato.py  test_normalizacao.py  test_orgaos_siafi.py
utils/: __init__.py  logging_config.py  normalization.py  rate_limiter.py
