[project]
name = "transparencia-brasil"
version = "0.1.0"
description = ""
authors = [
    {name = "Andre Mendes Nunes",email = "branco.de@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "supabase (>=2.31.0,<3.0.0)",
    "typer (>=0.26.7,<0.27.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "structlog (>=26.1.0,<27.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
